# HeliosEngine

./: .clang-format  .gitignore  .gitmodules  HeliosEngine.sln  README.md  WallnutEngine2D.sln  build.bat  build.sh  clean.bat  generate_vs2022.bat  launch.bat  premake5.bat  premake5.lua  renderdoc.cap
AeëtesHub/: Cargo.toml
EngineUI/: EngineUI.vcxproj  EngineUI.vcxproj.filters  imgui.ini
Fonts/: icons.sfd
Game/: Game.vcxproj
HSLParser/: Cargo.toml
HeliosEditor/: .gitignore  CubePixelShader.cso  CubeVertexShader.cso  EngineUI.vcxproj.filters  HeliosEditor.vcxproj  HeliosEditor.vcxproj.filters  PixelShader.cso  SpritePixelShader.cso  SpriteVertexShader.cso  StandardPixelShader.cso  StandardVertexShader.cso  TransformPixelShader.cso  TransformVertexShader.cso  VertexShader.cso  imgui.ini  premake5.lua  spv_build.bat
HeliosEngine/: HeliosEngine.licenseheader  HeliosEngine.vcxproj  HeliosEngine.vcxproj.filters  WallnutEngine2D.vcxproj.filters  cpp.hint  premake5.lua  resource.h
HeliosScript/RustProjectTemplate/: Cargo.toml  build.rs  rust-project.json
HeliosScript/RustProjectTemplate/src/: bindings.rs  lib.rs
Icons/: Logo.ai  c_file.psd  cpp_file.psd  cs_file.psd  folder-icon.psd  h_file.psd  hpp_file.psd  image_file.psd  object_file.psd  pause_icon_dark.psd  play_icon_dark.psd  rust_file.psd  scene-icon.psd  stop_icon_dark.psd  text_file.psd  ttf_file.psd  unknown_file.psd
ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
Json/: Json.vcxproj  Json.vcxproj.filters
ProjectExplorer/: Form1.Designer.cs  Form1.cs  New_Project.Designer.cs  New_Project.cs  (+5 more)
(+628 files in other folders)
